[workspace]
members = [
	"bin/node/cli",
	"bin/node/executor",
	"bin/node/primitives",
	"bin/node/rpc-client",
	"bin/node/rpc",
	"bin/node/modules/did",
	"bin/node/modules/ads",
	"bin/node/runtime",
	"bin/node/testing",
	"test/utils/chain-spec-builder",
	"test/utils/client",
	"test/utils/primitives",
	"test/utils/runtime",
	"test/utils/runtime/client",
	"test/utils/transaction-factory",
	"utils/build-script-utils",
	"utils/fork-tree",
	"utils/frame/rpc/support",
	"utils/frame/rpc/system",
	"utils/wasm-builder"
]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"
