[package]
name = "chain-spec-builder"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
ansi_term = "0.12.1"
keystore = { package = "sc-keystore", git = "https://github.com/ProChain/substrate.git" }
node-cli = { path = "../../../bin/node/cli" }
primitives = { package = "sp-core",  git = "https://github.com/ProChain/substrate.git" }
rand = "0.7.2"
structopt = "0.3.3"
