[package]
name = "substrate-test-client"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
client-api = { package = "sc-client-api", git = "https://github.com/ProChain/substrate.git" }
client = { package = "sc-client", git = "https://github.com/ProChain/substrate.git" }
client-db = { package = "sc-client-db", git = "https://github.com/ProChain/substrate.git", features = ["test-helpers"] }
consensus = { package = "sp-consensus", git = "https://github.com/ProChain/substrate.git" }
executor = { package = "sc-executor", git = "https://github.com/ProChain/substrate.git" }
futures = "0.3.1"
hash-db = "0.15.2"
keyring = { package = "sp-keyring", git = "https://github.com/ProChain/substrate.git" }
codec = { package = "parity-scale-codec", version = "1.0.0" }
primitives = { package = "sp-core", git = "https://github.com/ProChain/substrate.git" }
sp-runtime = {  git = "https://github.com/ProChain/substrate.git" }
sp-blockchain = { git = "https://github.com/ProChain/substrate.git" }
state_machine = { package = "sp-state-machine", git = "https://github.com/ProChain/substrate.git" }
