[package]
name = "substrate-test-primitives"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
app-crypto = { package = "sc-application-crypto", git = "https://github.com/ProChain/substrate.git", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
primitives = { package = "sp-core", git = "https://github.com/ProChain/substrate.git", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-runtime = {  git = "https://github.com/ProChain/substrate.git", default-features = false }

[features]
default = [
	"std",
]
std = [
	"app-crypto/std",
	"serde",
]
