[package]
name = "substrate-test-runtime"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
app-crypto = { package = "sc-application-crypto", git = "https://github.com/ProChain/substrate.git", default-features = false }
aura-primitives = { package = "sp-consensus-aura", git = "https://github.com/ProChain/substrate.git", default-features = false }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/ProChain/substrate.git", default-features = false }
block-builder-api = { package = "sp-block-builder", git = "https://github.com/ProChain/substrate.git", default-features = false }
cfg-if = "0.1.10"
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
executive = { package = "frame-executive", git = "https://github.com/ProChain/substrate.git", default-features = false }
inherents = { package = "sp-inherents", git = "https://github.com/ProChain/substrate.git", default-features = false }
keyring = { package = "sp-keyring", git = "https://github.com/ProChain/substrate.git", optional = true }
log = { version = "0.4.8", optional = true }
memory-db = { version = "0.15.2", default-features = false }
offchain-primitives = { package = "sp-offchain", git = "https://github.com/ProChain/substrate.git", default-features = false}
primitives = { package = "sp-core", git = "https://github.com/ProChain/substrate.git", default-features = false }
rstd = { package = "sp-std", git = "https://github.com/ProChain/substrate.git", default-features = false }
runtime-interface = { package = "sp-runtime-interface", git = "https://github.com/ProChain/substrate.git", default-features = false}
runtime_io = { package = "sp-io", git = "https://github.com/ProChain/substrate.git", default-features = false }
runtime_support = { package = "frame-support", git = "https://github.com/ProChain/substrate.git", default-features = false }
runtime_version = { package = "sp-version", git = "https://github.com/ProChain/substrate.git", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
session = { package = "sp-session", git = "https://github.com/ProChain/substrate.git", default-features = false }
sp-api = { git = "https://github.com/ProChain/substrate.git", default-features = false }
sp-runtime = {  git = "https://github.com/ProChain/substrate.git", default-features = false }
pallet-babe = { git = "https://github.com/ProChain/substrate.git", default-features = false }
frame-system = { git = "https://github.com/ProChain/substrate.git", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/ProChain/substrate.git", default-features = false }
pallet-timestamp = { git = "https://github.com/ProChain/substrate.git", default-features = false }
sc-client = { git = "https://github.com/ProChain/substrate.git", optional = true }
sp-trie = { git = "https://github.com/ProChain/substrate.git", default-features = false }
sp-transaction-pool = { package = "sp-transaction-pool-api", git = "https://github.com/ProChain/substrate.git", default-features = false }
trie-db = { version = "0.16.0", default-features = false }

[dev-dependencies]
sc-executor = { git = "https://github.com/ProChain/substrate.git" }
substrate-test-runtime-client = { path = "./client" }
state_machine = { package = "sp-state-machine", git = "https://github.com/ProChain/substrate.git" }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", git = "https://github.com/ProChain/substrate.git" }

[features]
default = [
	"std",
]
std = [
	"app-crypto/std",
	"aura-primitives/std",
	"babe-primitives/std",
	"block-builder-api/std",
	"codec/std",
	"executive/std",
	"inherents/std",
	"keyring",
	"log",
	"memory-db/std",
	"offchain-primitives/std",
	"primitives/std",
	"primitives/std",
	"rstd/std",
	"runtime-interface/std",
	"runtime_io/std",
	"runtime_support/std",
	"runtime_version/std",
	"serde",
	"session/std",
	"sp-api/std",
	"sp-runtime/std",
	"pallet-babe/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"sc-client",
	"sp-trie/std",
	"sp-transaction-pool/std",
	"trie-db/std",
]
