[package]
name = "transaction-factory"
version = "0.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
block-builder-api = { package = "sp-block-builder", git = "https://github.com/ProChain/substrate.git" }
cli = { package = "sc-cli", git = "https://github.com/ProChain/substrate.git" }
client-api = { package = "sc-client-api", git = "https://github.com/ProChain/substrate.git" }
client = { package = "sc-client", git = "https://github.com/ProChain/substrate.git" }
codec = { package = "parity-scale-codec", version = "1.0.0", features = ["derive"] }
consensus_common = { package = "sp-consensus", git = "https://github.com/ProChain/substrate.git" }
log = "0.4.8"
primitives = { package = "sp-core", git = "https://github.com/ProChain/substrate.git" }
sp-api = { git = "https://github.com/ProChain/substrate.git" }
sp-runtime = { git = "https://github.com/ProChain/substrate.git" }
sc-service = { git = "https://github.com/ProChain/substrate.git" }
sp-blockchain = { git = "https://github.com/ProChain/substrate.git" }

