[package]
name = "substrate-frame-rpc-support"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>", "Andrew Dirksen <andrew@dirksen.com>"]
edition = "2018"

[dependencies]
futures = { version = "0.3.0", features = ["compat"] }
jsonrpc-client-transports = "14"
jsonrpc-core = "14"
parity-scale-codec = "1"
serde = "1"
frame-support = { git = "https://github.com/ProChain/substrate.git" }
sp-core-storage = { git = "https://github.com/ProChain/substrate.git" }
sc-rpc-api = { git = "https://github.com/ProChain/substrate.git" }

[dev-dependencies]
frame-system = { git = "https://github.com/ProChain/substrate.git" }
tokio = "0.1"
